# jutility

./: .gitignore  LICENSE  README.md  build_local.py  pyproject.toml  setup.cfg
scripts/: cli_template.py  demo_noisycurve.py  demo_table_latency.py  display_progress_bar.py  make_logo.py  speed_test_legend_mathtext.py
src/jutility/: __init__.py  _fix_matplotlib_constrained_layout.py  cli.py  latex.py  plotting.py  properties.py  sweep.py  time_sweep.py  transform.py  units.py  util.py
src/jutility/cli/: __init__.py  arg.py  group.py  object_arg.py  object_choice.py  parent.py  parsed_args.py  parser.py  root.py  unknown.py  verbose.py
src/jutility/cli/subcmd/: group.py  no_group.py  parent.py  subcommand.py
src/jutility/plotting/: __init__.py  colour_picker.py  gif.py  latex.py  multiplot.py  noisy_data.py  plot.py  plottable.py  properties.py  show.py  temp_axis.py  time_sweep.py
src/jutility/plotting/figure/: fig_props.py  grid_props.py  legend.py  props.py
src/jutility/plotting/noisy/: bounds.py  curve.py  curve_sweep.py  data.py  sweep.py
src/jutility/plotting/subplot/: axis_props.py  base.py  colour_bar.py  empty.py  legend.py  subplot.py
src/jutility/util/: __init__.py  context_util.py  dict_util.py  img_util.py  interval.py  iter_util.py  md_util.py  np_util.py  print_util.py  save_load.py  str_fmt.py  str_util.py  sys_util.py  test_util.py  time_util.py  units.py  url_util.py
src/jutility/util/table/: base.py  column.py  func_list.py  table.py
tests/: __init__.py  test_cli.py  test_latex.py  test_plotting.py  test_sweep.py  test_time_sweep.py  test_transform.py  test_units.py  test_util.py  util.py
tests/test_cli/: test_args.py  test_parsed_args.py
tests/test_old/: test_cli.py  test_plotting.py  test_time_sweep.py  test_util.py
tests/test_plotting/: test_colour_picker.py  test_multiplot.py  test_noisy_data.py
tests/test_plotting/test_figure/: test_fig_props.py  test_legend.py
tests/test_plotting/test_noisy/: test_bounds.py  test_curve.py  test_curve_sweep.py  test_data.py  test_sweep.py
tests/test_util/: test_dict_util.py  test_img_util.py  test_str_fmt.py  test_str_util.py  test_sys_util.py  test_table.py  test_url_util.py
