[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jutility"
version = "0.0.4"
license = {text = "MIT License"}
authors = [
    {name = "Jake Levi", email = "jakelevi@hotmail.co.uk"},
]
description = "Collection of Python utilities intended to be useful for machine learning research and experiments"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.5.3",
    "numpy>=1.21.6",
    "Pillow>=9.5.0",
]

[project.urls]
homepage = "https://github.com/jakelevi1996/jutility"
