[metadata]
name = jutility
version = 0.0.6
author = Jake Levi
author_email = jakelevi@hotmail.co.uk
description = Collection of Python utilities intended to be useful for machine learning research and experiments
url = https://github.com/jakelevi1996/jutility
license = MIT License

[options]
python_requires = >=3.7
install_requires =
    matplotlib>=3.5.3
    numpy>=1.21.6
    Pillow>=9.5.0
