[metadata]
name = jutility
version = 0.0.18
author = Jake Levi
author_email = jakelevi@hotmail.co.uk
description = Collection of Python utilities intended to be useful for machine learning research and experiments.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
url = https://github.com/jakelevi1996/jutility
project_urls =
    Documentation   = https://github.com/jakelevi1996/jutility
    Source Code     = https://github.com/jakelevi1996/jutility
    Bug Tracker     = https://github.com/jakelevi1996/jutility/issues

[options]
python_requires = >=3.7
install_requires =
    matplotlib>=3.5.3
    numpy>=1.21.6
    Pillow>=9.5.0
